--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <select class="breed-select select-hidden"></select>
-    <p class="loader ">Loading data, please wait...</p>
+    <p class="loader "><span class="loader-spin"></span>Loading data, please wait...</p>
     <p class="error error-hidden">Oops! Something went wrong! Try reloading the page!</p>
     <div class="cat-info cat-card "></div>
 
